# NanoBoyAdvance

./: CMakeLists.txt
.github/workflows/: build.yml
src/platform/core/: CMakeLists.txt
src/platform/hydra/: CMakeLists.txt
src/platform/hydra/src/: core.cpp  icon.h
